changed snowflake color

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 </head>
 <body>
 	<div style="float: right;padding-right: 1%">
-		Let's play ONIONHEAD!
+		Let's play DONT KILL SANTA!
 		<ul>
 			<li>
 				Arrow keys to move (Left , Right and Up to Jump)
 			</li>
 			<li>
-				Collect all <b>yellow</b> stars to proceed to next level
+				Collect all <b>white</b> snowflakes to proceed to next level
 			</li>
 			<li>
 				Each level will have +1 more bombs
@@ -26,7 +26,7 @@
 			<li>
 				Press Any Key to Restart
 			</li>
-			<li>
+			<!-- <li>
 				(STAR) Gives You +10 points <img src="assets/golden_star.png"/>
 			</li>
 			<li>
@@ -40,6 +40,21 @@
 			</li>
 			<li>
 				(SUPER STAR) Gives You +30 points <img src="assets/black_star.png"/>
+			</li> -->
+			<li>
+				(SNOWFLAKE) Gives You +10 points 
+			</li>
+			<li>
+				(BOMB) You Die 
+			</li>
+			<li>
+				(GOD MODE - RED SNOWFLAKE) You do not die for 10 seconds
+			</li>
+			<li>
+				(SLOW TIME - PURPLE SNOWFLAKE) Time Slows Down for 5 seconds 
+			</li>
+			<li>
+				(SUPER STAR - BLACK SNOWFLAKE) Gives You +30 points
 			</li>
 			<li>
 				All special stars vanish in <b>10 seconds</b>
