modified super star logic

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				(SUPER STAR - BLACK SNOWFLAKE) Gives You +30 points
 			</li>
 			<li>
-				All special stars vanish in <b>10 seconds</b>
+				All special stars <b>DO NOT GIVE POINTS</b> and vanish in <b>10 seconds</b>
 			</li>
 		</ul>
 	</div>
